fix(maven): correção para seja possível utilizar reflection no windows