@@ -65,6 +65,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
+                    <argLine>
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
                     <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
